2009-06-18  Dirk Schulze  <krit@webkit.org>

Reviewed by Oliver Hunt.

        feTile implementation missing
        [https://bugs.webkit.org/show_bug.cgi?id=26419]

        Implementation of feTile, a pattern effect for SVG filters. It was
        necessary to modify FilterEffect since source inputs need a secial
        logic and we have to identify if an effect is a source input.

        Tests: svg/batik/filters/feTile.svg
               svg/filters/feTile.svg

        * platform/graphics/filters/FilterEffect.h:
        (WebCore::FilterEffect::isSourceInput):
        * platform/graphics/filters/SourceAlpha.h:
        (WebCore::SourceAlpha::isSourceInput):
        * platform/graphics/filters/SourceGraphic.h:
        (WebCore::SourceGraphic::isSourceInput):
        * svg/graphics/filters/SVGFETile.cpp:
        (WebCore::FETile::apply):


        Reviewed by Oliver Hunt.

        Added a test of batik and a own one to check behavior of the
        new feTile effect in SVG.

        * platform/mac/svg/batik/filters/feTile-expected.checksum: Added.
        * platform/mac/svg/batik/filters/feTile-expected.png: Added.
        * platform/mac/svg/batik/filters/feTile-expected.txt: Added.
        * platform/mac/svg/filters/feTile-expected.checksum: Added.
        * platform/mac/svg/filters/feTile-expected.png: Added.
        * platform/mac/svg/filters/feTile-expected.txt: Added.
        * svg/batik/filters/feTile.svg: Added.
        * svg/filters/feTile.svg: Added.


Canonical link: https://commits.webkit.org/36653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44840 268f45cc-cd09-0410-ab3c-d52691b4dbfc