WebCore/platform/graphics/filters/FilterEffect.h
@@ -83,6 +83,8 @@ namespace WebCore {
         virtual void apply(Filter*) = 0;
         virtual void dump() = 0;
 
+        virtual bool isSourceInput() { return false; }
+
         virtual TextStream& externalRepresentation(TextStream&) const;
     protected:
         FilterEffect();
