WebCore/platform/graphics/filters/SourceGraphic.h
@@ -35,6 +35,7 @@ namespace WebCore {
 
         static const AtomicString& effectName();
 
+        virtual bool isSourceInput() { return true; }
         virtual FloatRect calculateEffectRect(Filter*);
         void apply(Filter*);
         void dump();
